--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,15 +7,12 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Experience
-    url: '#experience'
+  - name: Posts
+    url: '#posts'
     weight: 20
-  # - name: Posts
-  #   url: '#posts'
-  #   weight: 30
-  # - name: Projects
-  #   url: '#projects'
-  #   weight: 40
+  - name: Gallery
+    url: '#gallery'
+    weight: 30
   - name: Contact
     url: '#contact'
-    weight: 50
+    weight: 40
